added rebar calc and rewored dialog visual

--- a/Finn/Dialogs/xEditDia.axaml
+++ b/Finn/Dialogs/xEditDia.axaml
@@ -1,35 +1,47 @@
+
 <Window xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="270" d:DesignHeight="200"
+		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		mc:Ignorable="d" d:DesignWidth="270" d:DesignHeight="340"
 		MinWidth="290"
-		MinHeight="290"
+		MinHeight="340"
 		MaxWidth="290"
-		MaxHeight="290"
+		MaxHeight="340"
 		xmlns:ic="using:FluentIcons.Avalonia"
-        x:Class="Finn.Dialog.xEditDia"
-        Title="xEditDia"
+		x:Class="Finn.Dialog.xEditDia"
+		Title="Edit Project"
 		xmlns:vm="clr-namespace:Finn.ViewModels"
 		CanResize="False"
 		WindowStartupLocation="CenterScreen"
-        ExtendClientAreaToDecorationsHint="True"
+		ExtendClientAreaToDecorationsHint="True"
 		x:DataType="vm:MainViewModel">
 
+    <Window.Styles>
+        <Style Selector="Button.accent">
+            <Setter Property="CornerRadius" Value="{Binding Storage.General.CornerRadius}"/>
+            <Setter Property="Background" Value="{DynamicResource SystemAccentColor}"/>
+            <Setter Property="FontWeight" Value="SemiBold"/>
+            <Setter Property="FontSize" Value="15"/>
+        </Style>
+    </Window.Styles>
 
 	<Grid RowDefinitions="30,*" ColumnDefinitions="*" VerticalAlignment="Top" Margin="0">
 		<Panel Grid.Row="0" IsHitTestVisible="False"/>
-		<StackPanel Grid.Row="1" Width="310" Height="280" Orientation="Vertical" Spacing="10" HorizontalAlignment="Center" VerticalAlignment="Top">
-			<StackPanel Orientation="Vertical" HorizontalAlignment="Center" Spacing="0" Margin="10">
-				<ic:SymbolIcon Symbol="Edit" VerticalAlignment="Center" HorizontalAlignment="Center" IconVariant="Regular" FontSize="30"/>
-				<Label Content="Edit Project" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+		<StackPanel Grid.Row="1" Width="310" Height="260" Orientation="Vertical" Spacing="10" HorizontalAlignment="Center" VerticalAlignment="Top">
+			<StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="6" Margin="0,10,0,20">
+				<Border Width="48" Height="48" CornerRadius="24" Background="{DynamicResource SystemAccentColor}" HorizontalAlignment="Center">
+					<ContentControl>
+						<ic:SymbolIcon Symbol="Edit" FontSize="32" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+					</ContentControl>
+				</Border>
+				<TextBlock Text="Edit Project" FontSize="18" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,4,0,0"/>
 			</StackPanel>
 			<Grid ColumnDefinitions="100,160" RowDefinitions="35,35,35,50" HorizontalAlignment="Center">
 				<Label Grid.Row="2" Grid.Column="0" Content="Name" VerticalAlignment="Center"/>
 				<Label Grid.Row="1" Grid.Column="0" Content="Group" VerticalAlignment="Center"/>
 				<Label Grid.Row="0" Grid.Column="0" Content="Category" VerticalAlignment="Center"/>
 				<Label Grid.Row="3" Grid.Column="0" Content="Color" VerticalAlignment="Center"/>
-				
 				<TextBox Grid.Row="2" Grid.Column="1" Name="ProjectName" Text="{Binding CurrentProject.Namn, Mode=OneTime}" Width="160" VerticalAlignment="Center"/>
 				<TextBox Grid.Row="1" Grid.Column="1" Name="ProjectGroup" Text="{Binding CurrentProject.Parent, Mode=OneTime}" Width="160" VerticalAlignment="Center"/>
 				<ComboBox Grid.Row="0" Grid.Column="1" Name="ProjectCategory" Width="160" VerticalAlignment="Center">
@@ -37,16 +49,15 @@
 					<ComboBoxItem Content="Library"/>
 					<ComboBoxItem Content="Project"/>
 				</ComboBox>
-				<StackPanel Grid.Row="3" Grid.Column="1"  Orientation="Horizontal">
+				<StackPanel Grid.Row="3" Grid.Column="1"  Orientation="Horizontal" Margin="5,0,0,0">
 					<ColorPicker Color="{Binding CurrentProject.Foreground}" Width="80" HorizontalAlignment="Left" Name="ColorPickerForeground"/>
 					<Button Click="ResetColor" VerticalContentAlignment="Center" BorderBrush="Transparent">
 						<ic:SymbolIcon Symbol="ArrowReset" IconVariant="Regular" FontSize="18"/>
 					</Button>
 				</StackPanel>
 			</Grid>
-			
-			<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="20">
-				<Button Name="RenameAccept" HotKey="Enter" Content="Accept" Width="70" Background="{DynamicResource TextControlBackground}" Click="OnEditProject"/>
+			<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,15,0,0">
+				<Button Name="RenameAccept" Classes="accent" HotKey="Enter" Content="Accept" Width="70" Background="{DynamicResource SystemAccentColor}" Click="OnEditProject"/>
 			</StackPanel>
 		</StackPanel>
 	</Grid>
