--- a/Finn/Dialogs/xRenameDia.axaml
+++ b/Finn/Dialogs/xRenameDia.axaml
@@ -2,11 +2,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="180" d:DesignHeight="300"
+        mc:Ignorable="d" d:DesignWidth="390" d:DesignHeight="190"
 		MinWidth="390"
-		MinHeight="160"
+		MinHeight="190"
 		MaxWidth="390"
-		MaxHeight="160"
+		MaxHeight="190"
 		xmlns:ic="using:FluentIcons.Avalonia"
         x:Class="Finn.Dialog.xRenameDia"
         Title="xRenameDia"
@@ -16,17 +16,35 @@
         ExtendClientAreaToDecorationsHint="True"
 		x:DataType="vm:MainViewModel">
 
+	    <Window.Styles>
+			<Style Selector="Button.normal">
+				<Setter Property="CornerRadius" Value="{Binding Storage.General.CornerRadius}"/>
+				<Setter Property="FontWeight" Value="SemiBold"/>
+				<Setter Property="FontSize" Value="15"/>
+			</Style>
+			<Style Selector="Button.accent">
+				<Setter Property="CornerRadius" Value="{Binding Storage.General.CornerRadius}"/>
+				<Setter Property="Background" Value="{DynamicResource SystemAccentColor}"/>
+				<Setter Property="FontWeight" Value="SemiBold"/>
+				<Setter Property="FontSize" Value="15"/>
+			</Style>
+		</Window.Styles>
+
 		<Grid RowDefinitions="30,*" ColumnDefinitions="*" VerticalAlignment="Top" Margin="0">
 			<Panel Grid.Row="0" IsHitTestVisible="False"/>
 			<StackPanel Grid.Row="1" Width="390" Height="180" Orientation="Vertical" Spacing="10" HorizontalAlignment="Center" VerticalAlignment="Top">
-				<StackPanel Orientation="Vertical" HorizontalAlignment="Center" Spacing="0" Margin="10">
-					<ic:SymbolIcon Symbol="Rename" VerticalAlignment="Center" HorizontalAlignment="Center" IconVariant="Regular" FontSize="30"/>
-					<Label Content="Edit Filename" VerticalAlignment="Center"  HorizontalAlignment="Center"/>
-				</StackPanel>
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="6" Margin="0,10,0,16">
+                <Border Width="40" Height="40" CornerRadius="20" Background="{DynamicResource SystemAccentColor}" HorizontalAlignment="Center">
+                    <ContentControl>
+                        <ic:SymbolIcon Symbol="Rename" FontSize="22" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </ContentControl>
+                </Border>
+                <TextBlock Text="Rename File" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,4,0,0"/>
+            </StackPanel>
 				<TextBox Name="NewNameInput" HorizontalContentAlignment="Center" Width="360" />
-				<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="20">
-					<Button Name="TagAccept" HotKey="Enter" Content="Accept" Width="70" Background="{DynamicResource TextControlBackground}" Click="AcceptRename"/>
-					<Button Name="Cancel" HotKey="Escape" Content="Cancel" Width="70" Background="{DynamicResource TextControlBackground}" Click="OnClose"/>
+				<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="8">
+					<Button Name="TagAccept" HotKey="Enter" Classes="accent" Content="Accept" Width="70" Background="{DynamicResource TextControlBackground}" Click="AcceptRename"/>
+					<Button Name="Cancel" HotKey="Escape" Classes="normal" Content="Cancel" Width="70" Background="{DynamicResource TextControlBackground}" Click="OnClose"/>
 				</StackPanel>
 			</StackPanel>
 		</Grid>
