--- a/Finn/Dialogs/xCloseDia.axaml
+++ b/Finn/Dialogs/xCloseDia.axaml
@@ -2,33 +2,58 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="230" d:DesignHeight="90"
-		MinWidth="240"
-		MinHeight="115"
-		MaxWidth="240"
-		MaxHeight="115"
-		xmlns:ic="using:FluentIcons.Avalonia"
+        mc:Ignorable="d" d:DesignWidth="250" d:DesignHeight="150"
+        MinWidth="250"
+        MinHeight="150"
+        MaxWidth="250"
+        MaxHeight="150"
+        xmlns:ic="using:FluentIcons.Avalonia"
         x:Class="Finn.Dialog.xCloseDia"
-        Title="xCloseDia"
-		xmlns:vm="clr-namespace:Finn.ViewModels"
-		CanResize="False"
-		WindowStartupLocation="CenterScreen"
+        Title="Save before close?"
+        xmlns:vm="clr-namespace:Finn.ViewModels"
+        CanResize="False"
+        WindowStartupLocation="CenterScreen"
         ExtendClientAreaToDecorationsHint="True"
-		x:DataType="vm:MainViewModel">
-	
-		<Grid RowDefinitions="30,170" Height="115" VerticalAlignment="Top" Margin="0">
-			<Panel Grid.Row="0" IsHitTestVisible="False"/>
-			<StackPanel Grid.Row="1" Height="170" Orientation="Vertical" VerticalAlignment="Center" Spacing="10">
-				<StackPanel Orientation="Vertical" HorizontalAlignment="Center" Margin="10" Spacing="0">
-					<ic:SymbolIcon Symbol="Save" VerticalAlignment="Center" HorizontalAlignment="Center" IconVariant="Regular" FontSize="30"/>
-					<Label Content="Save before close?" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-				</StackPanel>
-				<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="5">
-					<Button Name="SaveYes" HotKey="Enter" Width="70" Content="Yes" Click="SaveBeforeClose" Background="{DynamicResource TextControlBackground}"/>
-					<Button Name="SaveNo" Width="70" Content="No" Click="OnLeave" Background="{DynamicResource TextControlBackground}"/>
-					<Button Name="SaveCancel" HotKey="Escape" Width="70" Content="Cancel" Click="OnCancel" Background="{DynamicResource TextControlBackground}"/>
-				</StackPanel>
-			</StackPanel>
-		</Grid>
+        x:DataType="vm:MainViewModel">
 
+    <Window.Styles>
+        <Style Selector="Button.accent">
+            <Setter Property="CornerRadius" Value="{Binding Storage.General.CornerRadius}"/>
+            <Setter Property="Background" Value="{DynamicResource SystemAccentColor}"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontWeight" Value="SemiBold"/>
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="Padding" Value="0"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
+            <Setter Property="BorderThickness" Value="0"/>
+        </Style>
+        <Style Selector="Button.default">
+            <Setter Property="CornerRadius" Value="{Binding Storage.General.CornerRadius}"/>
+            <Setter Property="Background" Value="{DynamicResource TextControlBackground}"/>
+            <Setter Property="Foreground" Value="{DynamicResource TextControlForeground}"/>
+            <Setter Property="FontWeight" Value="SemiBold"/>
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="Padding" Value="0"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
+            <Setter Property="BorderThickness" Value="0"/>
+        </Style>
+    </Window.Styles>
+    <Grid RowDefinitions="30,*" Height="140" VerticalAlignment="Top" Margin="0">
+        <Panel Grid.Row="0" IsHitTestVisible="False"/>
+        <StackPanel Grid.Row="1" Width="210" Height="110" Orientation="Vertical" Spacing="10" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="6" Margin="0,10,0,8">
+                <Border Width="40" Height="40" CornerRadius="20" Background="{DynamicResource SystemAccentColor}" HorizontalAlignment="Center">
+                    <ContentControl>
+                        <ic:SymbolIcon Symbol="Save" FontSize="22" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </ContentControl>
+                </Border>
+                <TextBlock Text="Save before close?" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,4,0,0"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="8" Margin="-14,15,0,0">
+                <Button Name="SaveYes" HotKey="Enter" Width="70" Content="Yes" Click="SaveBeforeClose" Classes="accent"/>
+                <Button Name="SaveNo" Width="70" Content="No" Click="OnLeave" Classes="default"/>
+                <Button Name="SaveCancel" HotKey="Escape" Width="70" Content="Cancel" Click="OnCancel" Classes="default"/>
+            </StackPanel>
+        </StackPanel>
+    </Grid>
 </Window>
