--- a/Finn/Dialogs/xColorDia.axaml
+++ b/Finn/Dialogs/xColorDia.axaml
@@ -1,32 +1,49 @@
 <Window xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="180" d:DesignHeight="280"
-		MinWidth="270"
-		MinHeight="620"
-		MaxWidth="270"
-		MaxHeight="620"
+		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		mc:Ignorable="d" d:DesignWidth="320" d:DesignHeight="650"
+		MinWidth="320"
+		MinHeight="650"
+		MaxWidth="320"
+		MaxHeight="650"
 		xmlns:ic="using:FluentIcons.Avalonia"
-        x:Class="Finn.Dialog.xColorDia"
-        Title="xColorDia"
+		x:Class="Finn.Dialog.xColorDia"
+		Title="Edit Theme Colors"
 		xmlns:vm="clr-namespace:Finn.ViewModels"
 		xmlns:icxt="using:FluentIcons.Avalonia.MarkupExtensions"
 		CanResize="False"
 		WindowStartupLocation="CenterScreen"
-        ExtendClientAreaToDecorationsHint="True"
+		ExtendClientAreaToDecorationsHint="True"
 		x:DataType="vm:MainViewModel">
+
+    <Window.Styles>
+        <Style Selector="Button.accent">
+            <Setter Property="CornerRadius" Value="{Binding Storage.General.CornerRadius}"/>
+            <Setter Property="Background" Value="{DynamicResource SystemAccentColor}"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontWeight" Value="SemiBold"/>
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="Padding" Value="0"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
+            <Setter Property="BorderThickness" Value="0"/>
+        </Style>
+    </Window.Styles>
 
 
 
 	<Grid RowDefinitions="30,*" ColumnDefinitions="*" VerticalAlignment="Top" Margin="0">
 		<Panel Grid.Row="0" IsHitTestVisible="False"/>
 		<StackPanel Grid.Row="1" Width="270" Height="620" Orientation="Vertical" Spacing="10" HorizontalAlignment="Center" VerticalAlignment="Top">
-				
-			<StackPanel Orientation="Vertical" HorizontalAlignment="Center" Margin="10" Spacing="0">
-				<ic:SymbolIcon Symbol="ColorBackground" VerticalAlignment="Center" HorizontalAlignment="Center" IconVariant="Regular" FontSize="30"/>
-				<Label Content="Edit Theme Colors" VerticalAlignment="Center"  HorizontalAlignment="Center"/>
-			</StackPanel>
+
+			<StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="6" Margin="0,10,0,10">
+                <Border Width="48" Height="48" CornerRadius="24" Background="{DynamicResource SystemAccentColor}" HorizontalAlignment="Center">
+                    <ContentControl>
+                        <ic:SymbolIcon Symbol="ColorBackground" FontSize="32" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </ContentControl>
+                </Border>
+                <TextBlock Text="Edit UI" FontSize="18" FontWeight="Bold" Foreground="{DynamicResource SystemAccentColor}" HorizontalAlignment="Center" Margin="0,4,0,0"/>
+            </StackPanel>
 				
 			<Grid ColumnDefinitions="100,120" RowDefinitions="30,40,40,40,40,40,40,40,40,40,40,40,60" HorizontalAlignment="Center" VerticalAlignment="Center">
 
@@ -77,7 +94,7 @@
 				<ComboBox Name="FontCombo" Grid.Column="1" Grid.Row="10" Width="110" SelectedValue="{Binding Storage.General.Font}"/>
 				<ComboBox Name="FontSizeCombo" Grid.Column="1" Grid.Row="11" Width="110" SelectedValue="{Binding Storage.General.FontSize}"/>
 
-				<Button Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="12" Width="80" Content="Close" Click="OnClose" HorizontalAlignment="Center" Background="{DynamicResource TextControlBackground}"/>
+				<Button Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="12" Classes="accent" Width="80" Content="Close" Click="OnClose" HorizontalAlignment="Center" Background="{DynamicResource TextControlBackground}"/>
 			</Grid>
 		</StackPanel>
 	</Grid>
