--- a/Finn/Dialogs/xDeleteDia.axaml
+++ b/Finn/Dialogs/xDeleteDia.axaml
@@ -2,11 +2,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="180" d:DesignHeight="300"
+        mc:Ignorable="d" d:DesignWidth="180" d:DesignHeight="160"
 		MinWidth="220"
-		MinHeight="140"
+		MinHeight="160"
 		MaxWidth="220"
-		MaxHeight="140"
+		MaxHeight="160"
 		xmlns:ic="using:FluentIcons.Avalonia"
         x:Class="Finn.Dialog.xDeleteDia"
         Title="xDeleteDia"
@@ -16,16 +16,36 @@
         ExtendClientAreaToDecorationsHint="True"
 		x:DataType="vm:MainViewModel">
 
+	<Window.Styles>
+		<Style Selector="Button.normal">
+            <Setter Property="Background" Value="{DynamicResource TextControlBackground}"/>
+            <Setter Property="Foreground" Value="{DynamicResource TextControlForeground}"/>
+			<Setter Property="CornerRadius" Value="{Binding Storage.General.CornerRadius}"/>
+			<Setter Property="FontWeight" Value="SemiBold"/>
+			<Setter Property="FontSize" Value="15"/>
+		</Style>
+		<Style Selector="Button.accent">
+			<Setter Property="CornerRadius" Value="{Binding Storage.General.CornerRadius}"/>
+			<Setter Property="Background" Value="{DynamicResource SystemAccentColor}"/>
+			<Setter Property="FontWeight" Value="SemiBold"/>
+			<Setter Property="FontSize" Value="15"/>
+		</Style>
+	</Window.Styles>
+
 	<Grid RowDefinitions="30,*" ColumnDefinitions="*" VerticalAlignment="Top" Margin="0">
 		<Panel Grid.Row="0" IsHitTestVisible="False"/>
 		<StackPanel Grid.Row="1" Orientation="Vertical" Spacing="14" HorizontalAlignment="Center" VerticalAlignment="Top">
-			<StackPanel Classes="DialogHeader" Orientation="Vertical">
-				<ic:SymbolIcon Symbol="Warning" HorizontalAlignment="Center" IconVariant="Regular" FontSize="28" Foreground="#FF6B6B"/>
-				<Label Content="Remove File?" HorizontalAlignment="Center"/>
+			<StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="6" Margin="0,10,0,20">
+				<Border Width="48" Height="48" CornerRadius="24" Background="{DynamicResource SystemAccentColor}" HorizontalAlignment="Center">
+					<ContentControl>
+						<ic:SymbolIcon Symbol="Warning" FontSize="32" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+					</ContentControl>
+				</Border>
+				<TextBlock Text="Remove?" FontSize="18" FontWeight="Bold" HorizontalAlignment="Center"/>
 			</StackPanel>
 			<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="8">
-				<Button Name="ConfirmButton" HotKey="Enter" Content="Confirm" Classes="DialogPrimary" Click="OnConfirm"/>
-				<Button Name="CancelButton" HotKey="Escape" Content="Cancel" Classes="DialogAction" Click="OnCancel"/>
+				<Button Name="ConfirmButton" HotKey="Enter" Width="80" Classes="accent" Content="Confirm" Click="OnConfirm"/>
+				<Button Name="CancelButton" HotKey="Escape" Width="80" Classes="normal" Content="Cancel" Click="OnCancel"/>
 			</StackPanel>
 		</StackPanel>
 	</Grid>
