--- a/Finn/Dialogs/xInfoDia.axaml
+++ b/Finn/Dialogs/xInfoDia.axaml
@@ -1,43 +1,60 @@
-<Window xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="270" d:DesignHeight="200"
-		MinWidth="420"
-		MinHeight="270"
-		MaxWidth="420"
-		MaxHeight="270"
+   <Window xmlns="https://github.com/avaloniaui"
+		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        mc:Ignorable="d" d:DesignWidth="460" d:DesignHeight="420"
+      MinWidth="460"
+		MaxWidth="460"
+		SizeToContent="Height"
 		xmlns:ic="using:FluentIcons.Avalonia"
-        x:Class="Finn.Dialog.xInfoDia"
-        Title="xInfoDia"
+		x:Class="Finn.Dialog.xInfoDia"
+		Title="File Info"
 		xmlns:vm="clr-namespace:Finn.ViewModels"
 		CanResize="False"
 		WindowStartupLocation="CenterScreen"
-        ExtendClientAreaToDecorationsHint="True"
+		ExtendClientAreaToDecorationsHint="True"
 		x:DataType="vm:MainViewModel">
+
+        <Window.Styles>
+            <Style Selector="Button.accent">
+                <Setter Property="CornerRadius" Value="{Binding Storage.General.CornerRadius}"/>
+                <Setter Property="Background" Value="{DynamicResource SystemAccentColor}"/>
+                <Setter Property="FontWeight" Value="SemiBold"/>
+                <Setter Property="FontSize" Value="15"/>
+            </Style>
+        </Window.Styles>
 
 
 		<Grid RowDefinitions="30,*" ColumnDefinitions="*" VerticalAlignment="Top" Margin="0">
 			<Panel Grid.Row="0" IsHitTestVisible="False"/>
-			<StackPanel Grid.Row="1" Width="440" Height="290" Orientation="Vertical" Spacing="10" HorizontalAlignment="Center" VerticalAlignment="Top">
-				<StackPanel Orientation="Vertical" HorizontalAlignment="Center" Spacing="0" Margin="10">
-					<ic:SymbolIcon Symbol="Question" VerticalAlignment="Center" HorizontalAlignment="Center" IconVariant="Regular" FontSize="30"/>
-					<Label Content="File Info" VerticalAlignment="Center"  HorizontalAlignment="Center"/>
-				</StackPanel>
-				<Grid Name="InfoGrid" HorizontalAlignment="Center" ColumnDefinitions="80,300" RowDefinitions="35,35,35,35,35">
-					<Label Grid.Row="0" Grid.Column="0" Content="Name" VerticalAlignment="Center"/>
-					<Label Grid.Row="1" Grid.Column="0" Content="Created" VerticalAlignment="Center"/>
-					<Label Grid.Row="2" Grid.Column="0" Content="Last Read" VerticalAlignment="Center"/>
-					<Label Grid.Row="3" Grid.Column="0" Content="Last Write" VerticalAlignment="Center"/>
-					<Label Grid.Row="4" Grid.Column="0" Content="Size" VerticalAlignment="Center"/>
-
-					<Label Name="NameLabel" Grid.Row="0" Grid.Column="1" VerticalAlignment="Center"/>
-					<Label Name="CreationLabel" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center"/>
-					<Label Name="ReadLabel" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center"/>
-					<Label Name="WriteLabel" Grid.Row="3" Grid.Column="1" VerticalAlignment="Center"/>
-					<Label Name="SizeLabel" Grid.Row="4" Grid.Column="1" VerticalAlignment="Center"/>
-				</Grid>
+        <StackPanel Grid.Row="1" Width="420" Orientation="Vertical" Spacing="12" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,18,0,18">
+			<StackPanel Orientation="Vertical" HorizontalAlignment="Center" Spacing="6" Margin="0,6,0,0">
+				<Border Width="44" Height="44" CornerRadius="22" Background="{DynamicResource SystemAccentColor}" HorizontalAlignment="Center">
+					<ContentControl>
+						<ic:SymbolIcon Symbol="Question" FontSize="22" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+					</ContentControl>
+				</Border>
+				<TextBlock Text="File Info" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,6,0,0"/>
 			</StackPanel>
+
+            <Grid Name="InfoGrid" HorizontalAlignment="Center" ColumnDefinitions="120,300" RowDefinitions="40,40,40,40,40" Margin="0,6,0,0">
+				<Label Grid.Row="0" Grid.Column="0" Content="Name" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+				<Label Grid.Row="1" Grid.Column="0" Content="Created" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+				<Label Grid.Row="2" Grid.Column="0" Content="Last Read" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+				<Label Grid.Row="3" Grid.Column="0" Content="Last Write" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+				<Label Grid.Row="4" Grid.Column="0" Content="Size" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+
+				<Label Name="NameLabel" Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+				<Label Name="CreationLabel" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+				<Label Name="ReadLabel" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+				<Label Name="WriteLabel" Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+				<Label Name="SizeLabel" Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+			</Grid>
+
+			<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,8,0,0">
+              <Button Name="InfoClose" Content="Close" Classes="accent" Width="70" Click="OnClose"/>
+			</StackPanel>
+		</StackPanel>
 		</Grid>
 
 	
