--- a/Finn/Dialogs/xMessageDia.axaml
+++ b/Finn/Dialogs/xMessageDia.axaml
@@ -2,11 +2,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="180" d:DesignHeight="300"
+        mc:Ignorable="d" d:DesignWidth="300" d:DesignHeight="175"
 		MinWidth="300"
-		MinHeight="160"
+		MinHeight="175"
 		MaxWidth="300"
-		MaxHeight="160"
+		MaxHeight="175"
 		xmlns:ic="using:FluentIcons.Avalonia"
         x:Class="Finn.Dialog.xMessageDia"
         Title="xMessageDia"
@@ -15,19 +15,30 @@
 		WindowStartupLocation="CenterScreen"
         ExtendClientAreaToDecorationsHint="True"
 		x:DataType="vm:MainViewModel">
-
+	    <Window.Styles>
+			<Style Selector="Button.accent">
+				<Setter Property="CornerRadius" Value="{Binding Storage.General.CornerRadius}"/>
+				<Setter Property="Background" Value="{DynamicResource SystemAccentColor}"/>
+				<Setter Property="FontWeight" Value="SemiBold"/>
+				<Setter Property="FontSize" Value="15"/>
+			</Style>
+		</Window.Styles>
 		<Grid RowDefinitions="30,*" ColumnDefinitions="*" VerticalAlignment="Top" Margin="0">
 			<Panel Grid.Row="0" IsHitTestVisible="False"/>
 			<StackPanel Grid.Row="1" Width="300" Height="180" Orientation="Vertical" Spacing="10" HorizontalAlignment="Center" VerticalAlignment="Top">
-				<StackPanel Orientation="Vertical" HorizontalAlignment="Center" Spacing="0" Margin="10">
-					<ic:SymbolIcon Symbol="WarningShield" VerticalAlignment="Center" HorizontalAlignment="Center" IconVariant="Regular" FontSize="30"/>
-					<Label Content="Message" VerticalAlignment="Center"  HorizontalAlignment="Center"/>
-				</StackPanel>
+			<StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="6" Margin="0,10,0,20">
+				<Border Width="48" Height="48" CornerRadius="24" Background="{DynamicResource SystemAccentColor}" HorizontalAlignment="Center">
+					<ContentControl>
+						<ic:SymbolIcon Symbol="WarningShield" FontSize="32" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+					</ContentControl>
+				</Border>
+				<TextBlock Text="Message" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,4,0,0"/>
+			</StackPanel>
 				
 				<Label Name="MessageLabel" VerticalAlignment="Center"  HorizontalAlignment="Center"/>
 				
 				<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="20">
-					<Button Name="Close" HotKey="Enter" Content="Accept" Width="70" Background="{DynamicResource TextControlBackground}" Click="OnClose"/>
+					<Button Name="Close" HotKey="Enter" Classes="accent" Content="Accept" Width="70" Click="OnClose"/>
 				</StackPanel>
 				
 			</StackPanel>
