--- a/Finn/Dialogs/xNewDia.axaml
+++ b/Finn/Dialogs/xNewDia.axaml
@@ -2,11 +2,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="270" d:DesignHeight="200"
+        mc:Ignorable="d" d:DesignWidth="270" d:DesignHeight="290"
 		MinWidth="290"
-		MinHeight="240"
+		MinHeight="290"
 		MaxWidth="290"
-		MaxHeight="240"
+		MaxHeight="290"
 		xmlns:ic="using:FluentIcons.Avalonia"
         x:Class="Finn.Dialog.xNewDia"
         Title="xNewDia"
@@ -16,13 +16,26 @@
         ExtendClientAreaToDecorationsHint="True"
 		x:DataType="vm:MainViewModel">
 
+		<Window.Styles>
+			<Style Selector="Button.accent">
+				<Setter Property="CornerRadius" Value="{Binding Storage.General.CornerRadius}"/>
+				<Setter Property="Background" Value="{DynamicResource SystemAccentColor}"/>
+				<Setter Property="FontWeight" Value="SemiBold"/>
+				<Setter Property="FontSize" Value="15"/>
+			</Style>
+		</Window.Styles>
+
 		<Grid RowDefinitions="30,*" ColumnDefinitions="*" VerticalAlignment="Top" Margin="0">
 			<Panel Grid.Row="0" IsHitTestVisible="False"/>
 			<StackPanel Grid.Row="1" Width="310" Height="260" Orientation="Vertical" Spacing="10" HorizontalAlignment="Center" VerticalAlignment="Top">
-				<StackPanel Orientation="Vertical" HorizontalAlignment="Center" Spacing="0" Margin="10">
-					<ic:SymbolIcon Symbol="Folder" VerticalAlignment="Center" HorizontalAlignment="Center" IconVariant="Regular" FontSize="30"/>
-					<Label Content="New Project" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-				</StackPanel>
+			<StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="6" Margin="0,10,0,20">
+				<Border Width="48" Height="48" CornerRadius="24" Background="{DynamicResource SystemAccentColor}" HorizontalAlignment="Center">
+					<ContentControl>
+						<ic:SymbolIcon Symbol="Folder" FontSize="32" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+					</ContentControl>
+				</Border>
+				<TextBlock Text="New Project" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,4,0,0"/>
+			</StackPanel>
 				<Grid ColumnDefinitions="100,160" RowDefinitions="35,35,35" HorizontalAlignment="Center">
 					<Label Grid.Row="2" Grid.Column="0" Content="Name" VerticalAlignment="Center"/>
 					<Label Grid.Row="1" Grid.Column="0" Content="Group" VerticalAlignment="Center"/>
@@ -37,8 +50,8 @@
 					</ComboBox>
 				</Grid>
 
-				<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="20">
-					<Button Name="RenameAccept" HotKey="Enter" Content="Accept" Width="70" Background="{DynamicResource TextControlBackground}" Click="OnAddProject"/>
+				<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,15,0,0">
+					<Button Name="RenameAccept" HotKey="Enter" Classes="accent" Content="Accept" Width="70" Background="{DynamicResource SystemAccentColor}" Click="OnAddProject"/>
 				</StackPanel>
 			</StackPanel>
 		</Grid>
