--- a/Finn/Dialogs/xPlaceholderDia.axaml
+++ b/Finn/Dialogs/xPlaceholderDia.axaml
@@ -2,11 +2,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="180" d:DesignHeight="300"
+        mc:Ignorable="d" d:DesignWidth="180" d:DesignHeight="190"
 		MinWidth="190"
-		MinHeight="160"
+		MinHeight="190"
 		MaxWidth="190"
-		MaxHeight="160"
+		MaxHeight="190"
 		xmlns:ic="using:FluentIcons.Avalonia"
         x:Class="Finn.Dialog.xPlaceholderDia"
         Title="New Placeholder File"
@@ -15,17 +15,28 @@
 		WindowStartupLocation="CenterScreen"
         ExtendClientAreaToDecorationsHint="True"
 		x:DataType="vm:MainViewModel">
-
+        <Window.Styles>
+            <Style Selector="Button.accent">
+                <Setter Property="CornerRadius" Value="{Binding Storage.General.CornerRadius}"/>
+                <Setter Property="Background" Value="{DynamicResource SystemAccentColor}"/>
+                <Setter Property="FontWeight" Value="SemiBold"/>
+                <Setter Property="FontSize" Value="15"/>
+            </Style>
+        </Window.Styles>
 		<Grid RowDefinitions="30,*" ColumnDefinitions="*" VerticalAlignment="Top" Margin="0">
 			<Panel Grid.Row="0" IsHitTestVisible="False"/>
 			<StackPanel Grid.Row="1" Width="210" Height="180" Orientation="Vertical" Spacing="10" HorizontalAlignment="Center" VerticalAlignment="Top">
-				<StackPanel Orientation="Vertical" HorizontalAlignment="Center" Spacing="0" Margin="10">
-					<ic:SymbolIcon Symbol="DocumentAdd" VerticalAlignment="Center" HorizontalAlignment="Center" IconVariant="Regular" FontSize="30"/>
-					<Label Content="New Document" VerticalAlignment="Center"  HorizontalAlignment="Center"/>
-				</StackPanel>
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="6" Margin="0,10,0,16">
+                <Border Width="40" Height="40" CornerRadius="20" Background="{DynamicResource SystemAccentColor}" HorizontalAlignment="Center">
+                    <ContentControl>
+                        <ic:SymbolIcon Symbol="DocumentAdd" FontSize="22" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </ContentControl>
+                </Border>
+                <TextBlock Text="New Placeholder" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,4,0,0"/>
+            </StackPanel>
 				<TextBox Name="NewFileName" HorizontalContentAlignment="Center" Width="160" />
 				<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="20">
-					<Button Name="Accept" HotKey="Enter" Content="Accept" Width="70" Background="{DynamicResource TextControlBackground}" Click="OnAddPlaceholder"/>
+					<Button Name="Accept" HotKey="Enter" Classes="accent" Content="Accept" Width="70" Background="{DynamicResource TextControlBackground}" Click="OnAddPlaceholder"/>
 				</StackPanel>
 			</StackPanel>
 		</Grid>
