--- a/Finn/Dialogs/xTagDia.axaml
+++ b/Finn/Dialogs/xTagDia.axaml
@@ -2,32 +2,44 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="180" d:DesignHeight="300"
-		MinWidth="190"
-		MinHeight="160"
-		MaxWidth="190"
-		MaxHeight="160"
-		xmlns:ic="using:FluentIcons.Avalonia"
+        mc:Ignorable="d" d:DesignWidth="210" d:DesignHeight="200"
+        MinWidth="210"
+        MinHeight="200"
+        MaxWidth="210"
+        MaxHeight="200"
+        xmlns:ic="using:FluentIcons.Avalonia"
         x:Class="Finn.Dialog.xTagDia"
-        Title="xTagDia"
-		xmlns:vm="clr-namespace:Finn.ViewModels"
-		CanResize="False"
-		WindowStartupLocation="CenterScreen"
+        Title="Edit Tag"
+        xmlns:vm="clr-namespace:Finn.ViewModels"
+        CanResize="False"
+        WindowStartupLocation="CenterScreen"
         ExtendClientAreaToDecorationsHint="True"
-		x:DataType="vm:MainViewModel">
+        x:DataType="vm:MainViewModel">
 
-		<Grid RowDefinitions="30,*" ColumnDefinitions="*" VerticalAlignment="Top" Margin="0">
-			<Panel Grid.Row="0" IsHitTestVisible="False"/>
-			<StackPanel Grid.Row="1" Width="210" Height="180" Orientation="Vertical" Spacing="10" HorizontalAlignment="Center" VerticalAlignment="Top">
-				<StackPanel Orientation="Vertical" HorizontalAlignment="Center" Spacing="0" Margin="10">
-					<ic:SymbolIcon Symbol="TagQuestionMark" VerticalAlignment="Center" HorizontalAlignment="Center" IconVariant="Regular" FontSize="30"/>
-					<Label Content="Edit Tag" VerticalAlignment="Center"  HorizontalAlignment="Center"/>
-				</StackPanel>
-				<TextBox Name="TagMenuInput" HorizontalContentAlignment="Center" Width="160" />
-				<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="20">
-					<Button Name="TagAccept" HotKey="Enter" Content="Accept" Width="70" Background="{DynamicResource TextControlBackground}" Click="OnSetTag"/>
-				</StackPanel>
-			</StackPanel>
-		</Grid>
-    
+    <Window.Styles>
+        <Style Selector="Button.accent">
+            <Setter Property="CornerRadius" Value="{Binding Storage.General.CornerRadius}"/>
+            <Setter Property="Background" Value="{DynamicResource SystemAccentColor}"/>
+            <Setter Property="FontWeight" Value="SemiBold"/>
+            <Setter Property="FontSize" Value="15"/>
+        </Style>
+    </Window.Styles>
+
+    <Grid RowDefinitions="30,*" ColumnDefinitions="*" VerticalAlignment="Top" Margin="0">
+        <Panel Grid.Row="0" IsHitTestVisible="False"/>
+        <StackPanel Grid.Row="1" Width="190" Height="140" Orientation="Vertical" Spacing="10" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="6" Margin="0,10,0,16">
+                <Border Width="40" Height="40" CornerRadius="20" Background="{DynamicResource SystemAccentColor}" HorizontalAlignment="Center">
+                    <ContentControl>
+                        <ic:SymbolIcon Symbol="TagQuestionMark" FontSize="22" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </ContentControl>
+                </Border>
+                <TextBlock Text="Edit Tag" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,4,0,0"/>
+            </StackPanel>
+            <TextBox Name="TagMenuInput" HorizontalContentAlignment="Center" Width="140" />
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
+                <Button Name="TagAccept" HotKey="Enter" Content="Accept" Width="70" Classes="accent" Click="OnSetTag"/>
+            </StackPanel>
+        </StackPanel>
+    </Grid>
 </Window>
