--- a/Finn/Dialogs/xColorDia.axaml
+++ b/Finn/Dialogs/xColorDia.axaml
@@ -42,7 +42,7 @@
                         <ic:SymbolIcon Symbol="ColorBackground" FontSize="32" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </ContentControl>
                 </Border>
-                <TextBlock Text="Edit UI" FontSize="18" FontWeight="Bold" Foreground="{DynamicResource SystemAccentColor}" HorizontalAlignment="Center" Margin="0,4,0,0"/>
+                <TextBlock Text="Edit UI" FontSize="18" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,4,0,0"/>
             </StackPanel>
 				
 			<Grid ColumnDefinitions="100,120" RowDefinitions="30,40,40,40,40,40,40,40,40,40,40,40,60" HorizontalAlignment="Center" VerticalAlignment="Center">
